Advanced student search working for librarians. Old broken css files deleted and redesigned with correct layout.

--- a/librarySystem/grails-app/assets/stylesheets/bootstrap.css
+++ b/librarySystem/grails-app/assets/stylesheets/bootstrap.css
@@ -3181,8 +3181,8 @@ fieldset[disabled] .btn-primary.focus {
 .btn-success:focus,
 .btn-success.focus {
   color: #fff;
-  background-color: #c4c4c4;
-  border-color: #adadad;
+  background-color: #449d44;
+  border-color: #255625;
 }
 .btn-success:hover {
   color: #fff;
@@ -3193,8 +3193,8 @@ fieldset[disabled] .btn-primary.focus {
 .btn-success.active,
 .open > .dropdown-toggle.btn-success {
   color: #fff;
-  background-color: #c4c4c4;
-  border-color: #adadad;
+  background-color: #449d44;
+  border-color: #398439;
 }
 .btn-success:active:hover,
 .btn-success.active:hover,
@@ -3206,8 +3206,8 @@ fieldset[disabled] .btn-primary.focus {
 .btn-success.active.focus,
 .open > .dropdown-toggle.btn-success.focus {
   color: #fff;
-  background-color: #c4c4c4;
-  border-color: #adadad;
+  background-color: #398439;
+  border-color: #255625;
 }
 .btn-success:active,
 .btn-success.active,
@@ -3227,7 +3227,7 @@ fieldset[disabled] .btn-success.focus {
   border-color: #4cae4c;
 }
 .btn-success .badge {
-  color: #c4c4c4;
+  color: #5cb85c;
   background-color: #fff;
 }
 .btn-info {
